# GregCMake

.github/workflows/: cmake-single-platform.yml  static.yml
cMake/: CMakePresets.json
cMake/docs/: Doxyfile
cMake/docs/html/: index.html  navtreedata.js
cMake/docs/latex/: refman.tex
cMake/src/: CMakeLists.txt  cMake.cpp
src/: main.cpp
